fix: cofig eureka in order and product